# datahelm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml
.github/workflows/: ci.yml  deploy-release.yml  deploy.yml  docker-release.yml
analytics/: __init__.py  dashboard_factory.py  dbt_factory.py  dbt_runner.py
analytics/dbt_profiles/: .user.yml  profiles.yml
analytics/dbt_projects/datahelm_warehouse/: dbt_project.yml
analytics/nl_query/: __init__.py  ollama_client.py  semantic_catalog.py  service.py  sql_guard.py
analytics/notebooks/: source_overview.ipynb
config/analytics/: semantic_catalog.yaml
config/api/: clashofclans.yaml
config/dashboard/: projects.yaml
config/dbt/: projects.yaml
dagster_op/: dashboard_job.py  dashboard_schedule.py  dbt_job.py  dbt_schedule.py  ingestion_job.py  ingestion_schedule.py  ingestion_sensor.py  repository.py
docs/: deployment.md  document.md  local_dev.md
handlers/api/: clashofclans.py
handlers/bigquery/: __init__.py  bigquery.py
handlers/gcs/: __init__.py  gcs.py
handlers/s3/: __init__.py  s3.py
handlers/sharepoint/: __init__.py  sharepoint.py
ingestion/: ingestion_factory.py
ingestion/native_ingestions/: base_ingestion.py  clashofclans_ingestion.py
sandbox/handlers/: clashofclans.py
scripts/: lint_configs.py  run_dagster_dev.py
tests/: conftest.py  test_lint_configs.py
tests/unittests/analytics/: test_dbt_runner.py  test_factories.py
utils/: env_util.py  ingestion_utils.py  misc_utils.py
(+18 files in other folders)
