[metadata]
name = datahelm-eng-core
version = 0.1.0
description = "DataHelm ingestion and analytics framework"
long_description = file: README.md
long_description_content_type = text/markdown
author = "Nishat"
author_email = "nishat@example.com"
url = "https://github.com/DevStrikerTech/datahelm_eng_core"

[options]
packages = find:
python_requires = >=3.12.13
include_package_data = True
zip_safe = False

install_requires =
    dagster
    dagster-postgres
    requests
    psycopg2-binary
    python-dotenv
    pandas
    polars
    pyyaml
    python-dateutil
    matplotlib
    pytest
    environs
    omegaconf
    dbt-core
    dbt-postgres
    dagstermill
